--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -16,3 +16,9 @@ services:
   mongodb:
     image : mongo
     container_name: mongodb
+  db:
+    image: postgres
+    environment:
+      - POSTGRES_DB=postgres
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=postgres
