--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -3,4 +3,13 @@ build:
   os: ubuntu-20.04
   tools:
      python: "3.10"
-  
+python:
+  install:
+    - requirements: requirements.txt
+    - method: pip
+      path: .
+      extra_requirements:
+        - docs
+    - method: setuptools
+      path: another/package
+  system_packages: true
