--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,7 +15,7 @@ on:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  test:
+  integration_tests:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
