--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,7 +23,7 @@ jobs:
         run: docker-compose up -d
       - name: Test
         if: always()
-        run: docker exec ha_task_locker_app_1 python3.10 -m pytest
+        run: docker exec ha_task_locker_app_1 python3.10 -m pytest --cov-report xml
       - name: Codecov
         uses: codecov/codecov-action@v2.1.0
         with:
