i think i got it

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,13 +22,7 @@ jobs:
       - name: Build the stack
         run: docker-compose up -d
       - name: Test
-        if: always()
-        run: |
-          docker exec ha_task_locker_app_1 bash -c "\
-          python3.10 -m pytest --cov --cov-report xml;\
-          curl -Os https://uploader.codecov.io/latest/linux/codecov;\
-          chmod +x ./codecov;\
-          ls -la;\
-          ./codecov -f ./coverage.xml"
-      - name: unbuild the stack
-        run: docker-compose down
+        run: docker exec ha_task_locker_app_1 bash -c python3.10 -m pytest --cov --cov-report xml
+      - name: Codecov
+        uses: codecov/codecov-action@v2.1.0
+
